Revert "DVK-1634 : Style change to TabSwiper for sticky position, which works fine due to overlap porpoerty of container, but allows the z-index to wok correctly"
This reverts commit 1efd9a0ff2baed2f23c61b7c5c518b37303ed7aa.

--- a/src/components/content/fairwayCard/TabSwiper.css
+++ b/src/components/content/fairwayCard/TabSwiper.css
@@ -26,7 +26,6 @@ div.tabs {
   border: 1px solid var(--ion-color-light);
   border-width: 1px 0;
   margin-top: 20px;
-  position: sticky;
 }
 
 .tabs ion-button {
